# cv_research_2

./: tailgating_notebook.py  video_content.txt
people-counting/: .gitignore  LICENSE  README.md  batch_processor.py  batch_tailgating_detection.py  batch_tailgating_detection_v2.py  bot_sort_tracker.py  config.yaml  config_loader.py  debug_test.py  download_yolov10.py  download_yolov10x.py  download_yolov11.py  enhanced_tuning.py  folder_cleaner.py  gradio_interface.py  line_selector.py  parameter_sweep.py  parameter_tuning.py  people_counter.py  people_detector.py  pyproject.toml  quick_visual_tuning.py  requirements_tuning.txt  run_confidence_tests.py  run_improved_confidence_tests.py  setup_and_demo.py  simple_line_marker.py  simple_parameter_tuning.py  step_by_step_tuning.py  working_tuning.py  yolov11_tuning.py
people-counting/configs/: cisco_line_config.json  courtyard_line_config.json  global.yaml  vortex_line_config.json
people-counting/configs/defaults/: detection.yaml  line.json  tracker_select.yaml
people-counting/input/cisco/: cisco
people-counting/input/courtyard/: courtyard
people-counting/input/vortex/: vortex
people-counting/outputs/run_20250915_134108/: processing_summary.json
people-counting/outputs/run_20250915_134448/: processing_summary.json
people-counting/outputs/run_20250915_135151/: processing_summary.json
people-counting/scripts/: init_configs.py  parallel_benchmark.py
people-counting/trackers/: __init__.py  botsort.yaml  ocsort_wrapper.py
people-counting/trackers/ocsort/: __init__.py  ocsort.py
(+24 files in other folders)
